@@ -6,6 +6,8 @@ In progress
 + World generation progress is now shown when 'New Game' is pressed
 * World generation is now multi-threaded
 + NPC ships will now return fire if attacked
++ Player ship can now be destroyed in combat
++ Added gameover message screen with image
 
 ======================================================
 VERSION 0.0.1
